--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:            Site Title
+title:            You'll never walk alone
 description:      Describe your website here.
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://hanwujibaby.github.com
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Tony Wei
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  email:          wayleynam@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
@@ -40,7 +40,7 @@ links:
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Asia/Shanghai 
 future:      true
 pygments:    true
 markdown:    kramdown
