--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url:              http://hanwujibaby.github.com
 owner:
   name:           Tony Wei
   avatar:         avatar.jpg
-  bio:            "a coder and a super fans of LiverpoolFC"
+  bio:            "a java server-side coder and a super fans of LFC(Liverpool Football Club)"
   email:          wayleynam@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
