--- a/_config.yml
+++ b/_config.yml
@@ -33,12 +33,12 @@ bing_verify:
 
 # Links to include in top navigation
 # For external links add external: true
-links:
-  - title: Theme Setup
-    url: /theme-setup
-  - title: External Link
-    url: http://mademistakes.com
-    external: true
+#links:
+#  - title: Theme Setup
+#    url: /theme-setup
+#  - title: External Link
+#    url: 
+#    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Shanghai 
@@ -51,6 +51,12 @@ permalink:   /:categories/:title/
 
 # Amount of post to show on home page
 paginate: 5
+
+
+comments :
+    provider : duoshuo
+    duoshuo : 
+      name : wei4liverpool
 
 kramdown:
   auto_ids: true
