alter owner's name

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ url:              http://hanwujibaby.github.com
 #url:              http://localhost:4000/blog
 # Owner/author information
 owner:
-  name:           Tony Wei
+  name:           Wei4Liverpool
   avatar:         avatar.jpg
-  bio:            "a java server-side coder and a super fans of LFCLiverpool Football Club)"
+  bio:            "a java server-side coder and a super fans of LFC"
   email:          wayleynam@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
