--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:
 description:      something about me and my thoughts.
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-#url:              http://hanwujibaby.github.com
-url:              http://localhost:5000/
+url:              http://hanwujibaby.github.com
+#url:              http://localhost:5000/
 # Owner/author information
 owner:
   name:           Wei4Liverpool
