修改个人简介

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ url:              http://hanwujibaby.github.com
 #url:              http://localhost:5000/
 # Owner/author information
 owner:
-  name:           Wei4Liverpool
+  name:           WEI XING
   avatar:         avatar.jpg
-  bio:            "a java server-side coder and a super fans of LFC"
+  bio:            "a java server-side coder and a super fans of LFC,worked for SOHU.inc,YOUKU.inc"
   email:          wayleynam@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
